[package]
name = "fusebox-rust-sample"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fusebox = { version = "1.0.0", features = ["gtk_v4_6"], path = "../rust/fusebox" }
glib = { git = "https://github.com/gtk-rs/gtk-rs-core", version = "0.17.0" }
gtk4 = { git = "https://github.com/gtk-rs/gtk4-rs", version = "0.6", features = ["v4_6"] }
libc = "0.2.139"

[lib]
name = "fusesample"
crate-type = ["rlib", "cdylib"]
